--- a/图形绘制/文字图片绘制.ipynb
+++ b/图形绘制/文字图片绘制.ipynb
@@ -11,8 +11,8 @@
     "img=cv2.imread('image0.jpg',1)\n",
     "font=cv2.FONT_HERSHEY_SIMPLEX\n",
     "cv2.rectangle(img,(200,200),(500,400),(0,255,0),3)\n",
-    "cv2.putText(img,'this is flow',(100,300),font,1,(200,100,255),2,cv2.LINE_AA)\n",
-    "cv2.imshow('dst',img)\n",
+    "cv2.putText(img,'this is flow',(100,300),font,1,(200,100,255),2,cv2.LINE_AA) #5大小 7粗细 8类型\n",
+    "cv2.imshow('img',img)\n",
     "cv2.waitKey(0)"
    ]
   },
@@ -25,9 +25,13 @@
     "import cv2\n",
     "import numpy as np\n",
     "img=cv2.imread('image0.jpg',1)\n",
-    "font=cv2.FONT_HERSHEY_SIMPLEX\n",
-    "cv2.rectangle(img,(200,200),(500,400),(0,255,0),3)\n",
-    "cv2.putText(img,'this is flow',(100,300),font,1,(200,100,255),2,cv2.LINE_AA) #5大小 7粗细 8类型\n",
+    "height=int(img.shape[0]*0.2)\n",
+    "width=int(img.shape[0]*0.2)\n",
+    "imgResize=cv2.resize(img,(width,height))\n",
+    "cv2.imshow('imgReszie',imgResize)\n",
+    "for i in range(0,height):\n",
+    "    for j in range(0,width):\n",
+    "        img[i+200,j+350]=imgResize[i,j]\n",
     "cv2.imshow('img',img)\n",
     "cv2.waitKey(0)"
    ]
@@ -52,18 +56,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
   }
  },
  "nbformat": 4,
