--- a/图片特效/颜色反转.ipynb
+++ b/图片特效/颜色反转.ipynb
@@ -51,6 +51,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#1 load xml 2 load jpg 3 haar grey 4 detect 5 draw\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "#load xml 1 file name\n",
+    "face_xml=cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
+    "eye_xml=cv2.CascadeClassifier('haarcascade_eye.xml')\n",
+    "#load jpg\n",
+    "img=cv2.imread('iamge100.jpg')\n",
+    "cv2.imshow('dst',img)\n",
+    "#haar gray\n",
+    "gray=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "#detect 1 data 2 缩放系数 scale 3 目标大小 不能小于5个像素\n",
+    "faces=face_xml.detectMultiScale(gray,1.3,5)\n",
+    "print('face=',len(faces))\n",
+    "#draw\n",
+    "for (x,y,w,h) in faces:\n",
+    "    cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),2)#线条宽度2\n",
+    "    roi_face=gray[y:y+h,x:x+w]\n",
+    "    roi_color=img[y:y+h,x:x+w]\n",
+    "    eyes=eye_xml.detectMultiScale(roi_face)\n",
+    "    print('eyes=',len(eyes))\n",
+    "    for(e_x,e_y,e_w,e_h) in eyes:\n",
+    "        cv2.rectangle(roi_color,(e_x,e_y),(e_x+e_w,e_y+e_h),(0,255,0),2)\n",
+    "cv2.waitKey(0)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
